Properly inherit a readable color, patch by bugrep

--- a/templates/mt-trendy/style.css
+++ b/templates/mt-trendy/style.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: #333333;
-  color: black;
+  color: #cccccc;
   font-family: Verdana, Arial, sans-serif;
   margin: 0px;
 }
